# ckanext-clone-dataset

./: .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
ckanext/clone_dataset/: blueprint.py  helpers.py  interfaces.py  overrides.py  plugin.py
ckanext/clone_dataset/fanstatic/: clone-dataset.js  webassets.yml
ckanext/clone_dataset/templates/snippets/: package_item.html
ckanext/clone_dataset/tests/: test_plugin.py
