[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
babel.extractors =
    ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/clone_dataset/i18n/ckanext-clone_dataset.pot
width = 80

[init_catalog]
domain = ckanext-clone_dataset
input_file = ckanext/clone_dataset/i18n/ckanext-clone_dataset.pot
output_dir = ckanext/clone_dataset/i18n

[update_catalog]
domain = ckanext-clone_dataset
input_file = ckanext/clone_dataset/i18n/ckanext-clone_dataset.pot
output_dir = ckanext/clone_dataset/i18n
previous = true

[compile_catalog]
domain = ckanext-clone_dataset
directory = ckanext/clone_dataset/i18n
statistics = true
